# traffic-tracker

./: .gitignore  LICENSE  Makefile  buildspec.yml
adapt_feed/: Makefile  package.sh  pyproject.toml
adapt_feed/adapt_feed/: main.py
adapt_item/: Makefile  package.sh  pylintrc  pyproject.toml  stub-data.json
adapt_item/adapt_item/: main.py
ci/: codepipeline.yml
fetch_feed/: Makefile  package.sh  pyproject.toml
fetch_feed/fetch_feed/: main.py
read_from_table/: Makefile  package.sh  pyproject.toml
read_from_table/read_from_table/: main.py
scripts/: pipeline.sh
stacks/: infrastructure.yml
stacks/parameters/infrastructure/: live.json  test.json
website/: .babelrc  .eslintrc.json  .gitignore  .jestrc.json  Makefile  buildspec.yml  package-lock.json  package.json  package.sh  webpack.dev.config.js  webpack.prod.config.js
website/__tests__/spec/: example-spec.js
website/src/: router.jsx  stub-data.json
website/src/html/: index.html
website/src/routes/home/: index.jsx  index.scss
website/src/routes/home/components/: Example.jsx  Example.scss
website/src/styles/: colors.scss  index.scss
write_to_table/: Makefile  package.sh  pyproject.toml
write_to_table/write_to_table/: main.py
